--- a/sensorFinal/update/index1.html
+++ b/sensorFinal/update/index1.html
@@ -21,6 +21,8 @@
         <script type="text/javascript">
          var hitCount = 0;
          var missCount = 0;
+         var totalCount = 0;
+         var dataset = [];
          var accDiv = document.getElementById("accuracy");
          var totalDiv = document.getElementById("totalShots");
          var hitDiv = document.getElementById("hitShots");
